tests/valid_programs/references/auto_deref4.duck
fn main() {
    let arr = ["first", "second"];
    let ref_to_arr = &mut arr;
    let arr_of_res = [&mut ref_to_arr];

    std::io::println("before:");
    std::io::debug(arr);
    std::io::debug(*ref_to_arr);
    ref_to_arr[0] = "first modified";
    arr_of_res[0][1] = "second modified";
    std::io::println("after:");
    std::io::debug(arr);
    std::io::debug(*ref_to_arr);
}
