tests/errors/references/nested_array_assign_mut_ref.duck
fn main() {
    const arr = [&mut [1, 2, 3]];
    arr[0][1] = 20;
}
